--- a/chat/src/main/res/layout/com_crafttalk_chat_item_server_union_message.xml
+++ b/chat/src/main/res/layout/com_crafttalk_chat_item_server_union_message.xml
@@ -112,6 +112,18 @@
         app:layout_constraintTop_toBottomOf="@id/server_message"
         tools:visibility="visible" />
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/actions_list"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="6dp"
+        android:nestedScrollingEnabled="true"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_constraintTop_toBottomOf="@id/content_container"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:visibility="visible" />
+
     <androidx.constraintlayout.widget.Barrier
         android:id="@+id/barrier_content_end"
         android:layout_width="0dp"
@@ -156,6 +168,6 @@
         layout="@layout/com_crafttalk_chat_include_server_message_info"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/content_container" />
+        app:layout_constraintTop_toBottomOf="@id/actions_list" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
