Updated methods for starting a chat session

--- a/chat/src/main/res/values/attrs.xml
+++ b/chat/src/main/res/values/attrs.xml
@@ -8,7 +8,11 @@
             <enum name="AUTH_WITHOUT_FORM" value="1"/>
         </attr>
         <attr name="operator_preview_mode" format="enum">
-            <enum name="CACHE_ONLY_LINK" value="0"/>
+            <enum name="CACHE" value="0"/>
+            <enum name="ALWAYS_REQUEST" value="1"/>
+        </attr>
+        <attr name="operator_name_mode" format="enum">
+            <enum name="CACHE" value="0"/>
             <enum name="ALWAYS_REQUEST" value="1"/>
         </attr>
         <attr name="timeDelayed" format="integer"/>
