--- a/chat/src/main/res/layout/com_crafttalk_chat_view_host.xml
+++ b/chat/src/main/res/layout/com_crafttalk_chat_view_host.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#fff"
@@ -9,45 +10,93 @@
 
     <TextView
         android:id="@+id/warningConnection"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginBottom="15dp"
+        android:paddingHorizontal="20dp"
+        android:paddingVertical="15dp"
         android:text="@string/com_crafttalk_chat_internet_connection_warning"
         android:fontFamily="@font/com_crafttalk_chat_ubuntu_regular"
         android:textFontWeight="400"
-        android:visibility="invisible" />
+        android:visibility="invisible"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:visibility="gone" />
+
+    <TextView
+        android:id="@+id/infoChatState"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:paddingHorizontal="20dp"
+        android:paddingVertical="15dp"
+        android:text="@string/com_crafttalk_chat_stete_synchronization"
+        android:fontFamily="@font/com_crafttalk_chat_ubuntu_regular"
+        android:textFontWeight="400"
+        android:visibility="invisible"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:visibility="visible" />
+
+    <androidx.constraintlayout.widget.Barrier
+        android:id="@+id/br_chat_state"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:barrierDirection="bottom"
+        app:constraint_referenced_ids="warningConnection,infoChatState" />
 
     <View
         android:id="@+id/upper_limiter"
         android:layout_width="match_parent"
         android:layout_height="2dp"
-        android:layout_below="@+id/warningConnection" />
+        app:layout_constraintTop_toBottomOf="@id/br_chat_state" />
 
     <include
         android:id="@+id/chat_place"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         layout="@layout/com_crafttalk_chat_layout_chat"
-        android:visibility="gone" />
+        android:visibility="gone"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/upper_limiter"
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:visibility="visible" />
 
     <include
         android:id="@+id/auth_form"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         layout="@layout/com_crafttalk_chat_layout_auth"
-        android:visibility="gone" />
+        android:visibility="gone"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/upper_limiter"
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:visibility="gone" />
 
     <include
         android:id="@+id/warning"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         layout="@layout/com_crafttalk_chat_layout_warning"
-        android:visibility="gone" />
+        android:visibility="gone"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/upper_limiter"
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:visibility="gone" />
 
     <include
         android:id="@+id/user_feedback"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         layout="@layout/com_crafttalk_chat_layout_user_feedback"
-        android:layout_alignParentBottom="true"
-        android:visibility="gone" />
+        android:visibility="gone"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:visibility="gone" />
 
     <ProgressBar
         android:id="@+id/loading"
@@ -58,6 +107,11 @@
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
         android:paddingTop="200dp"
-        android:visibility="gone" />
+        android:visibility="gone"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:visibility="gone" />
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
