--- a/chat/src/main/res/drawable/com_crafttalk_chat_ic_file_downloaded.xml
+++ b/chat/src/main/res/drawable/com_crafttalk_chat_ic_file_downloaded.xml
@@ -6,5 +6,5 @@
     android:tint="#FFFFFF">
     <path
         android:fillColor="@android:color/white"
-        android:pathData="M19,9h-4V3H9v6H5l7,7 7,-7zM5,18v2h14v-2H5z"/>
+        android:pathData="M6,2c-1.1,0 -1.99,0.9 -1.99,2L4,20c0,1.1 0.89,2 1.99,2L18,22c1.1,0 2,-0.9 2,-2L20,8l-6,-6L6,2zM13,9L13,3.5L18.5,9L13,9z"/>
 </vector>
