--- a/chat/src/main/res/layout/com_crafttalk_chat_item_server_union_message.xml
+++ b/chat/src/main/res/layout/com_crafttalk_chat_item_server_union_message.xml
@@ -31,6 +31,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="start"
+        android:autoLink="email"
         android:fontFamily="@font/com_crafttalk_chat_ubuntu_light"
         android:textFontWeight="300"
         android:paddingStart="@dimen/com_crafttalk_chat_message_content_padding_start"
