--- a/chat/src/main/res/layout/com_crafttalk_chat_include_file_info.xml
+++ b/chat/src/main/res/layout/com_crafttalk_chat_include_file_info.xml
@@ -3,8 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
 
     <ImageView
         android:id="@+id/file_icon"
@@ -33,23 +33,24 @@
 
     <TextView
         android:id="@+id/file_name"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:maxLines="1"
+        android:maxWidth="100dp"
         android:ellipsize="end"
         android:singleLine="true"
         android:layout_marginStart="4dp"
         android:paddingTop="4dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toEndOf="@id/progress_download"
-        app:layout_constraintEnd_toEndOf="parent"
         tools:text="test.pdf" />
 
     <TextView
         android:id="@+id/file_size"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:maxLines="1"
+        android:maxWidth="100dp"
         android:ellipsize="end"
         android:singleLine="true"
         android:layout_marginTop="4dp"
@@ -57,7 +58,6 @@
         android:paddingBottom="4dp"
         app:layout_constraintStart_toEndOf="@id/progress_download"
         app:layout_constraintTop_toBottomOf="@id/file_name"
-        app:layout_constraintEnd_toEndOf="parent"
         tools:text="750 Кб" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
