Added customization of the appearance of the quoted message

--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -46,8 +46,7 @@
         app:color_main="@color/color_main"
         app:color_bg_user_message="@color/color_main"
         app:color_text_operator_action="@color/color_main"
-        app:color_text_user_message="#fff"
-        app:color_user_message_status="#fff"
+        app:color_user_message_status="#000"
         app:drawable_progress_indeterminate="@drawable/spinner"
         app:show_internet_connection_state="false"
         app:show_chat_state="false"
