--- a/chat/src/main/res/values/attrs.xml
+++ b/chat/src/main/res/values/attrs.xml
@@ -15,14 +15,18 @@
         <attr name="color_bg_operator_selected_action" format="color"/>
         <attr name="color_borders_operator_action" format="color"/>
         <attr name="color_text_user_message" format="color"/>
+        <attr name="color_barrier_replied_message" format="color"/>
+        <attr name="color_text_user_replied_message" format="color"/>
         <attr name="color_text_operator_message" format="color"/>
         <attr name="color_text_operator_action" format="color"/>
         <attr name="color_text_operator_selected_action" format="color"/>
         <attr name="color_file_name" format="color"/>
         <attr name="color_user_file_name" format="color"/>
+        <attr name="color_user_replied_file_name" format="color"/>
         <attr name="color_operator_file_name" format="color"/>
         <attr name="color_file_size" format="color"/>
         <attr name="color_user_file_size" format="color"/>
+        <attr name="color_user_replied_file_size" format="color"/>
         <attr name="color_operator_file_size" format="color"/>
         <attr name="color_text_user_message_author" format="color"/>
         <attr name="color_text_operator_message_author" format="color"/>
@@ -69,13 +73,16 @@
         <attr name="drawable_document_downloaded_icon" format="reference"/>
 
         <attr name="size_user_message" format="dimension"/>
+        <attr name="size_user_replied_message" format="dimension"/>
         <attr name="size_operator_message" format="dimension"/>
         <attr name="size_operator_action" format="dimension"/>
         <attr name="size_file_name" format="dimension"/>
         <attr name="size_user_file_name" format="dimension"/>
+        <attr name="size_user_replied_file_name" format="dimension"/>
         <attr name="size_operator_file_name" format="dimension"/>
         <attr name="size_file_size" format="dimension"/>
         <attr name="size_user_file_size" format="dimension"/>
+        <attr name="size_user_replied_file_size" format="dimension"/>
         <attr name="size_operator_file_size" format="dimension"/>
         <attr name="size_user_message_author" format="dimension"/>
         <attr name="size_operator_message_author" format="dimension"/>
