--- a/chat/src/main/res/layout/com_crafttalk_chat_item_user_text_message.xml
+++ b/chat/src/main/res/layout/com_crafttalk_chat_item_user_text_message.xml
@@ -61,6 +61,7 @@
         app:constraint_referenced_ids="replied_message_container,user_message" />
 
     <include
+        android:id="@+id/include_message_info"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         layout="@layout/com_crafttalk_chat_include_user_message_info"
