--- a/chat/src/main/res/layout/com_crafttalk_chat_item_server_union_message.xml
+++ b/chat/src/main/res/layout/com_crafttalk_chat_item_server_union_message.xml
@@ -161,6 +161,7 @@
         app:layout_constraintStart_toEndOf="@id/barrier_content_end" />
 
     <include
+        android:id="@+id/include_message_info"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         layout="@layout/com_crafttalk_chat_include_server_message_info"
