--- a/chat/src/main/res/layout/com_crafttalk_chat_item_user_gif_message.xml
+++ b/chat/src/main/res/layout/com_crafttalk_chat_item_user_gif_message.xml
@@ -86,6 +86,7 @@
         app:constraint_referenced_ids="user_gif,user_gif_warning,download_file" />
 
     <include
+        android:id="@+id/include_message_info"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         layout="@layout/com_crafttalk_chat_include_user_message_info"
